FilterQuery/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-0f460a37-725d-4a7a-8070-e49b8461b064
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-0f460a37-725d-4a7a-8070-e49b8461b064
  template:
    metadata:
      labels:
        app: springboot-app-0f460a37-725d-4a7a-8070-e49b8461b064
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-03e60079-6a6b-44c7-905e-495c0bfef98d-graph:4.0.0
        ports:
        - containerPort: 8081
